Adding company and device entities

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -94,6 +94,18 @@
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
+    <script src="app/entities/device/device-dialog.controller.js"></script>
+    <script src="app/entities/device/device-detail.controller.js"></script>
+    <script src="app/entities/device/device-delete-dialog.controller.js"></script>
+    <script src="app/entities/device/device.state.js"></script>
+    <script src="app/entities/device/device.service.js"></script>
+    <script src="app/entities/device/device.controller.js"></script>
+    <script src="app/entities/company/company-dialog.controller.js"></script>
+    <script src="app/entities/company/company-detail.controller.js"></script>
+    <script src="app/entities/company/company-delete-dialog.controller.js"></script>
+    <script src="app/entities/company/company.state.js"></script>
+    <script src="app/entities/company/company.service.js"></script>
+    <script src="app/entities/company/company.controller.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
     <script src="app/components/util/sort-by.directive.js"></script>
