import traccar devices

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -97,6 +97,7 @@
     <script src="app/entities/device/device-dialog.controller.js"></script>
     <script src="app/entities/device/device-detail.controller.js"></script>
     <script src="app/entities/device/device-delete-dialog.controller.js"></script>
+    <script src="app/entities/traccar/traccar.service.js"></script>
     <script src="app/entities/device/device.state.js"></script>
     <script src="app/entities/device/device.service.js"></script>
     <script src="app/entities/device/device.controller.js"></script>
