--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -93,11 +93,17 @@
     <script src="app/layouts/error/error.state.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
+    <script src="app/entities/traccar/traccar.service.js"></script>
+    <script src="app/entities/person/person-dialog.controller.js"></script>
+    <script src="app/entities/person/person-detail.controller.js"></script>
+    <script src="app/entities/person/person-delete-dialog.controller.js"></script>
+    <script src="app/entities/person/person.state.js"></script>
+    <script src="app/entities/person/person.service.js"></script>
+    <script src="app/entities/person/person.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
     <script src="app/entities/device/device-dialog.controller.js"></script>
     <script src="app/entities/device/device-detail.controller.js"></script>
     <script src="app/entities/device/device-delete-dialog.controller.js"></script>
-    <script src="app/entities/traccar/traccar.service.js"></script>
     <script src="app/entities/device/device.state.js"></script>
     <script src="app/entities/device/device.service.js"></script>
     <script src="app/entities/device/device.controller.js"></script>
