--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -100,6 +100,12 @@
     <script src="app/entities/person/person.state.js"></script>
     <script src="app/entities/person/person.service.js"></script>
     <script src="app/entities/person/person.controller.js"></script>
+    <script src="app/entities/message/message-dialog.controller.js"></script>
+    <script src="app/entities/message/message-detail.controller.js"></script>
+    <script src="app/entities/message/message-delete-dialog.controller.js"></script>
+    <script src="app/entities/message/message.state.js"></script>
+    <script src="app/entities/message/message.service.js"></script>
+    <script src="app/entities/message/message.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
     <script src="app/entities/device/device-dialog.controller.js"></script>
     <script src="app/entities/device/device-detail.controller.js"></script>
