adding search filter in messages page

--- a/src/main/webapp/app/entities/message/message-detail.html
+++ b/src/main/webapp/app/entities/message/message-detail.html
@@ -12,9 +12,9 @@
         <dd>
             <span>{{vm.message.macroNumber}}</span>
         </dd>
-        <dt><span translate="fleetApp.message.macroText">Macro Text</span></dt>
+        <dt><span translate="fleetApp.message.text">Macro Text</span></dt>
         <dd>
-            <span>{{vm.message.macroText}}</span>
+            <span>{{vm.message.text}}</span>
         </dd>
         <dt><span translate="fleetApp.message.device">Device</span></dt>
         <dd>
