--- a/src/main/webapp/app/entities/message/messages.html
+++ b/src/main/webapp/app/entities/message/messages.html
@@ -4,10 +4,42 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-4 no-padding-left">
+                <div class="form-group">
+                    <label class="control-label" translate="fleetApp.message.messageTime" for="field_messageTime">Message Time</label>
+                    <div class="input-group">
+                        <input id="field_messageTime" type="text" class="form-control" name="messageTime" datetime-picker="{{dateformat}}" ng-model="vm.message.messageTime" is-open="vm.datePickerOpenStatus.messageTime"
+                               required  />
+                            <span class="input-group-btn">
+                                <button type="button" class="btn btn-default" ng-click="vm.openCalendar('messageTime')"><i class="glyphicon glyphicon-calendar"></i></button>
+                            </span>
+                    </div>
+                    <div ng-show="editForm.messageTime.$invalid">
+                        <p class="help-block"
+                           ng-show="editForm.messageTime.$error.required" translate="entity.validation.required">
+                            This field is required.
+                        </p>
+                        <p class="help-block"
+                           ng-show="editForm.messageTime.$error.ZonedDateTimelocal" translate="entity.validation.ZonedDateTimelocal">
+                            This field should be a date and time.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-4">
                 <button class="btn btn-primary" ui-sref="message.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span  translate="fleetApp.message.home.createLabel">
                         Create new Message
+                    </span>
+                </button>
+            </div>
+            <div class="col-xs-2">
+                <button class="btn btn-primary" ng-click="vm.loadAll()" >
+                    <span class="glyphicon glyphicon-search"></span>
+                    <span  translate="entity.action.search">
+                        Search
                     </span>
                 </button>
             </div>
@@ -21,7 +53,7 @@
                     <th jh-sort-by="id"><span translate="global.field.id">ID</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="messageTime"><span translate="fleetApp.message.messageTime">Message Time</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="macroNumber"><span translate="fleetApp.message.macroNumber">Macro Number</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="macroText"><span translate="fleetApp.message.macroText">Macro Text</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="text"><span translate="fleetApp.message.text">Macro Text</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="deviceName"><span translate="fleetApp.message.device">Device</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
@@ -31,7 +63,7 @@
                     <td><a ui-sref="message-detail({id:message.id})">{{message.id}}</a></td>
                     <td>{{message.messageTime | date:'medium'}}</td>
                     <td>{{message.macroNumber}}</td>
-                    <td>{{message.macroText}}</td>
+                    <td>{{message.text}}</td>
                     <td>
                         <a ui-sref="device-detail({id:message.deviceId})">{{message.deviceName}}</a>
                     </td>
